2020-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): If the image width is 1, then X
	magnification is done by by simple pixel replication.  If the
	image height is 1, then Y magnification is done by simple pixel
	replication.  Fixes oss-fuzz issue 19025 "Heap-buffer-overflow in
	ReadMNGImage" and oss-fuzz issue 19026 "ASSERT: yy < (long)
	large_image->rows". It appears that CERT has assigned
	CVE-2020-12672 for oss-fuzz issue 19025.  Note that the heap
	overwrite is only one byte.

2020-05-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with changes up to 2020-04-23.

2020-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Support dpx:swap-samples-read
	define which behaves similar to dpx:swap-samples, but is only
	applied when reading.  This provides for use when there is both
	reading and writing in the same operation.
	(WriteDPXImage): Support dpx:swap-samples-write define which
	behaves similar to dpx:swap-samples, but is only applied when
	writing.  This provides for use when there is both reading and
	writing in the same operation.

2020-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick: Fix remaining GCC 10 warnings.

2020-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/transform.c (GetImageMosaicDimensions): Mark function as pure.

	* magick/effect.c (GetNonpeakMedianList): Mark function as pure.

	* coders/fits.c (InsertRowHDU): Fix scary-sounding GCC 10 warning,
	which is actually benign.

	* config/config.sub: Update to latest config.sub

	* config/config.guess: Update to latest config.guess.

	* Makefile.am: Update to Automake 1.16.2

2020-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadRowSamples): Simplify 10-bit packed decoding.
	(WriteRowSamples): Simplify 10-bit packed encoding.

	* coders/locale.c (ReadConfigureFile): Ignore comment element if
	it was not found or is too short.
